[package]
name = "qinglong-shell"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "qinglong_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"      # 优化体积而非纯速度
lto = true           # 链接时优化,减小体积 + 提速
codegen-units = 1    # 牺牲并行换更激进优化
strip = true         # 剥离调试符号
panic = "abort"      # panic 时直接 abort,省掉 unwinding 表
